[HTTPCORE-496] Add API org.apache.http.protocol.UriPatternMatcher.entrySet()

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,13 @@
+Release 5.0-BETA2
+-------------------
+
+Changelog
+-------------------
+
+* HTTPCORE-496: Add API org.apache.http.protocol.UriPatternMatcher.entrySet().
+  Contributed by Gary Gregory <ggregory at apache.org>
+
+
 Release 5.0-BETA1
 -------------------
 
