--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,7 +1,7 @@
 Release 4.4.9
 -------------------
 
-This is a maintenance release that fixes a number of issues discovered since 4.4.8.
+This is a maintenance release that fixes a number of issues discovered since 4.4.8 ands a few low-level methods.
 
 Changelog
 -------------------
@@ -15,7 +15,10 @@ Changelog
 * HTTPCORE-497: Add API org.apache.http.nio.protocol.UriHttpAsyncRequestHandlerMapper.getUriPatternMatcher().
   Contributed by Gary Gregory <ggregory at apache.org>
 
-* HTTPCORE-499: Make interface Header extend NameValuePair
+* HTTPCORE-499: Make interface Header extend NameValuePair.
+  Contributed by Gary Gregory <ggregory at apache.org>
+  
+* HTTPCORE-502: Add APIs to DefaultHttpServerIODispatch to get its connection factory and handler.
   Contributed by Gary Gregory <ggregory at apache.org>
 
 
@@ -33,7 +36,7 @@ Changelog
 * HTTPCORE-493: Make org.apache.http.nio.protocol.HttpAsyncService.responseFactory available to subclasses.
   Contributed by Gary Gregory <ggregory at apache.org>
 
-* HTTPCORE-491 Make BasicAsyncRequest|ResponseConsumer more paranoid
+* HTTPCORE-491: Make BasicAsyncRequest|ResponseConsumer more paranoid
   Contributed by Michael Heemskerk <mheemskerk@atlassian.com>
 
 * HTTPCORE-490: session requests do not get cancelled correctly if the associated HTTP response futures get cancelled
