--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -27,7 +27,7 @@ Changelog
 * HTTPCORE-504: Update DefaultHttpClientIODispatch constructor to type for subclasses of DefaultNHttpClientConnection (like DefaultHttpServerIODispatch.)
   Contributed by Gary Gregory <ggregory at apache.org>
 
-* HTTPCORE-505: Make org.apache.http.nio.protocol.HttpAsyncService instance variables available to subclasses.
+* HTTPCORE-505: Make org.apache.http.nio.protocol.HttpAsyncService instance variables available through getters.
   Contributed by Gary Gregory <ggregory at apache.org>
 
 
