--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -18,6 +18,9 @@ Changelog
 * HTTPCORE-514: Exceptions defined by HttpCore should clean message strings when built to replace non-printable characters with hex values.
   Contributed by Gary Gregory <ggregory at apache.org>
 
+* HTTPCORE-515: Add convenience API org.apache.http.impl.nio.DefaultHttpServerIODispatch.create(T, SSLContext, ConnectionConfig, HttpRequestFactory).
+  Contributed by Gary Gregory <ggregory at apache.org>
+
   
 Release 4.4.9
 -------------------
