--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -16,6 +16,9 @@ adds several incremental improvements.
 * HTTPCORE-514: Exceptions defined by HttpCore should clean message strings when built to replace non-printable characters with hex values.
   Contributed by Gary Gregory <ggregory at apache.org>
 
+* HTTPCORE-517: Allow SecurityManager to stop socket connections.
+  Contributed by Gary Gregory <ggregory at apache.org> and Paul Thompson <pathompson at atlassian dot com>
+
 
 Release 5.0-BETA2
 -------------------
