--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -29,6 +29,10 @@ adds several incremental improvements.
   Contributed by Gary Gregory <ggregory at apache.org>
   
 * HTTPCORE-541: Add HttpVersion.ALL for all HTTP versions known to HttpCore.  
+  Contributed by Gary Gregory <ggregory at apache.org>
+
+* HTTPCORE-542: Add missing org.apache.hc.core5.http.message.BasicClassicHttpRequest.serialVersionUID
+  Contributed by Gary Gregory <ggregory at apache.org>
 
 Release 5.0-BETA2
 -------------------
