--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -11,6 +11,9 @@ Changelog
 
 * Fix typos in exception messages.
   Contributed by Gary Gregory <ggregory at apache.org>
+  
+* HTTPCORE-550: When a ParseException is caught and rethrown as an IOException in org.apache.http.impl.nio.codecs.ChunkDecoder.processFooters(), the IOException does not chain the original ParseException.
+  Contributed by Gary Gregory <ggregory at apache.org>
 
 
 Release 4.4.10
