--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -15,6 +15,9 @@ Changelog
 
 * Rename org.apache.hc.core5.http.EndpointDetails.getSocketTimeout() to getSocketTimeoutMillis().
   Contributed by Gary Gregory <ggregory at apache.org>
+  
+* Rename org.apache.hc.core5.http.MessageHeaders.getAllHeaders() to getHeaders(). 
+  Contributed by Gary Gregory <ggregory at apache.org>
 
 
 Release 5.0-BETA3
