- Deprecate and rename org.apache.hc.core5.util.Timeout.ofMillis(long) to ofMilliseconds(long). - Deprecate and rename org.apache.hc.core5.util.TimeValue.ofMillis(long) to ofMilliseconds(long). - In both cases, this was the only abbreviated API name in that class. For comparison, we use ofMicroseconds(), not ofMicros(); both classes now have consistent API names.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,3 +1,12 @@
+Release 5.0-BETA6
+-------------------
+
+* Deprecate and rename org.apache.hc.core5.util.Timeout.ofMillis(long) to ofMilliseconds(long).
+  Contributed by Gary Gregory <ggregory at apache.org>
+
+* Deprecate and rename org.apache.hc.core5.util.TimeValue.ofMillis(long) to ofMilliseconds(long).
+  Contributed by Gary Gregory <ggregory at apache.org>
+
 Release 5.0-BETA5
 -------------------
 
