--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -12,6 +12,9 @@ Release 5.0-BETA6
 
 * Add org.apache.hc.core5.util.TimeValue.divide(*).
   Contributed by Gary Gregory <ggregory at apache.org>
+  
+* org.apache.hc.core5.http.URIScheme.getId()
+  Contributed by Gary Gregory <ggregory at apache.org>
 
 Release 5.0-BETA5
 -------------------
