--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -19,6 +19,9 @@ Release 5.0-BETA6
 * HTTPCORE-562: The reason phrase returned by org.apache.hc.core5.http.HttpResponse.getReasonPhrase() may be empty.
   Contributed by Gary Gregory <ggregory at apache.org>
 
+* TimeValue can parse more leniently: Allow spaces and singular words for time units, for example " 1 SECOND ".
+  Contributed by Gary Gregory <ggregory at apache.org>
+
 
 Release 5.0-BETA5
 -------------------
