Add Add org.apache.hc.core5.http.HttpRequest.setUri(URI).
This is allow rewriting all manners of URIs possible and simple. This
makes a previously package private method in BasicHttpRequest public and
pulls it up to the HttpRequest interface.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -24,6 +24,9 @@ Release 5.0-BETA6
   
 * Add HttpStreamResetException.serialVersionUID 
   Contributed by Gary Gregory <ggregory at apache.org>
+  
+* Add org.apache.hc.core5.http.HttpRequest.setUri(URI)
+  Contributed by Gary Gregory <ggregory at apache.org>
 
 
 Release 5.0-BETA5
